# purrfect_vault

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  settings.toml
scripts/: build_bitcoincore.sh
src/: main.rs  settings.rs  wallet.rs
src/vault/: basic_recursive_covenant.rs  contract.rs  mod.rs  script.rs  signature_building.rs  single_output_constraint_contract.rs  unused_scripts.rs  vault_contract.rs  witness.rs
