[package]
name = "purrfect_vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bitcoin = "0.31.1"
bitcoincore-rpc = "0.18.0"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.10.0"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.4.6"
secp256kfun = "0.9.1"
sha2 = "0.10.8"
schnorr_fun = "0.9.2"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.10"